--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".CustomApplication"
         android:theme="@style/Theme.CaseStudy">
-        <activity android:name=".MainActivity">
+        <activity android:name=".presentation.InvestedActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
