--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation("androidx.core:core-ktx:1.3.2")
     implementation("androidx.appcompat:appcompat:1.2.0")
     implementation("com.google.android.material:material:1.3.0")
+    implementation('com.wdullaer:materialdatetimepicker:4.2.3')
 
     implementation "org.koin:koin-android:2.2.2"
     implementation "org.koin:koin-android-viewmodel:2.2.2"
