create layer repository and add inject dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     implementation(project(":domain"))
     implementation(project(":component"))
+    implementation(project(":data"))
 
 
     testImplementation 'junit:junit:4.+'
