--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fioalpha.poc.form">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,14 +13,13 @@
         android:name=".CustomApplication"
         android:theme="@style/Theme.CaseStudy">
         <activity android:name=".presentation.calcule.InvestedActivity">
-
-        </activity>
-        <activity android:name=".presentation.result.ResultInvestCalculateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".presentation.result.ResultInvestCalculateActivity">
         </activity>
     </application>
 
