--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'kotlin-android'
 }
 
+apply from: "${rootDir}/config/ktlint/ktlint.gradle"
+apply from: "${rootDir}/config/detekt/detekt.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -30,9 +33,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding {
-        enabled = true
+
+    buildFeatures {
+        viewBinding true
     }
+
 }
 
 dependencies {
@@ -59,6 +64,7 @@ dependencies {
     implementation(project(":domain"))
     implementation(project(":component"))
     implementation(project(":data"))
+    implementation(project(":extensions"))
 
 
     testImplementation 'junit:junit:4.13.2'
