--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,18 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC15"
+}
+
+subprojects {
+    apply plugin: "io.gitlab.arturbosch.detekt"
+
+    detekt {
+        toolVersion = "1.0.0-RC15"
+    }
+}
+
 allprojects {
     repositories {
         google()
