--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3")
     implementation("org.koin:koin-core:2.2.2")
 
+    implementation(project(":extensions"))
+
     testImplementation("junit:junit:4.13.2")
     testImplementation("org.assertj:assertj-core:3.16.1")
     testImplementation("org.mockito:mockito-core:3.9.0")
