--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 apply from: "${rootDir}/config/ktlint/ktlint.gradle"
-apply from: "${rootDir}/config/detekt/detekt.gradle"
+//apply from: "${rootDir}/config/detekt/detekt.gradle"
 
 android {
     compileSdkVersion 30
