--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'java-library'
 }
 
+apply from: "${rootDir}/config/ktlint/ktlint.gradle"
+
 dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
