--- a/component/build.gradle
+++ b/component/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
 }
 
+apply from: "${rootDir}/config/ktlint/ktlint.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
