--- a/config/ktlint/ktlint.gradle
+++ b/config/ktlint/ktlint.gradle
@@ -12,6 +12,13 @@ task ktlintVerification(type: JavaExec, group: "verification") {
     args "-F", "src/**/*.kt", "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/reports/ktlint/ktlint-checkstyle.xml"
 }
 
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.pinterest.ktlint.Main"
+    args "-F", "src/**/*.kt", "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/reports/ktlint/ktlint-checkstyle.xml"
+}
+
 
 
 task runChecksForDanger() {
